# Genetic-Algorithm

./: CMakeLists.txt  Main.qml  README.md  datageneration.cpp  datageneration.h  main.cpp
